--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,3 +1,14 @@
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/deneme
+    username: "root"
+    password: "12345"
+    driver-class-name: com.mysql.cj.jdbc.Driver
+  jpa:
+    hibernate:
+      ddl-auto: update
+
+
 mailbox:
   ui:
     address: "*"
