--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -1,3 +1,11 @@
+spring:
+  datasource:
+    url: jdbc:mysql://localhost:3306/deneme
+    username: "root"
+    password: "12345"
+    driver-class-name: com.mysql.cj.jdbc.Driver
+
+
 mailbox:
   ui:
     address: "https://mailbox.co"
